# tax-optimizer-cz

./: .gitignore  Makefile  README.md  SPECIFICATION.md  pyproject.toml
config/: coin_aliases.csv  settings.toml  transferove_mapovani.example.csv  vyloucene_transakce.example.txt  zamknute_roky.example.toml
src/danove/: audit.py  ceny.py  konsolidace.py  obohaceni.py  optimalizace.py  report.py  validace.py  zostatok.py
src/danove/ingest/: atomic.py  binance.py  bitfinex.py  bitstamp.py  bittrex.py  coinmate.py  electrum.py
src/danove/util/: coin.py  datum.py  http.py
testy/: conftest.py  test_ceny.py  test_ingest_binance.py  test_ingest_bitstamp.py  test_ingest_bittrex.py  test_ingest_coinmate.py  test_optimalizace.py  test_report.py  test_validace.py  test_zakon.py
testy/fixtures/: ukazka_binance.csv  ukazka_bitstamp.csv  ukazka_bittrex_utf16.py  ukazka_coinmate.csv
