[project]
name = "danove"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0",
    "duckdb>=1.1",
    "ortools>=9.11",
    "XlsxWriter>=3.2",
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/danove"]

[tool.pytest.ini_options]
testpaths = ["testy"]
pythonpath = ["src"]
